# LangStorm

./: LICENSE  README.md
LangStormApp/: pyproject.toml
LangStormApp/langstormapp/: manage.py
LangStormApp/langstormapp/langstormapp/: settings.py  urls.py
docker/: docker-compose.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
src/frontend/: package-lock.json  package.json
src/frontend/src/: App.css  App.js
src/frontend/src/components/: AddButton.js  Header.js  ListItem.js
src/frontend/src/pages/: LessonListPage.js  MainPage.js  WordPage.js  WordsListPage.js
src/server/: README.md  pyproject.toml
src/server/langstormapp/api/: admin.py  models.py  serializer.py  urls.py  utils.py  utils_api.py  views.py
src/server/langstormapp/langstormapp/: asgi.py  settings.py  urls.py  wsgi.py
